Try to fix Java 9 build.

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.bytebuddy</groupId>
@@ -536,6 +537,7 @@
                 <jdk>9</jdk>
             </activation>
             <properties>
+                <project.build.outputTimestamp/>
                 <sourcecode.main.version>1.6</sourcecode.main.version>
                 <sourcecode.test.version>1.6</sourcecode.test.version>
                 <bytecode.main.version>1.6</bytecode.main.version>
