--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-18.04
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
+      - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
           java-version: 19-ea
           distribution: zulu
@@ -33,8 +33,8 @@ jobs:
         java: [ 8, 11, 17, 18 ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
+      - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
           java-version: ${{ matrix.java }}
           distribution: temurin
@@ -51,8 +51,8 @@ jobs:
         java: [ 8, 11 ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
+      - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
           java-version: ${{ matrix.java }}
           distribution: adopt-openj9
@@ -68,8 +68,8 @@ jobs:
         java: [ 9, 10, 12, 13, 14, 15, 16 ]
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
+      - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
           java-version: ${{ matrix.java }}
           distribution: zulu
@@ -86,8 +86,8 @@ jobs:
         java: [ 8 ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
+      - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
           java-version: ${{ matrix.java }}
           distribution: zulu
@@ -103,13 +103,13 @@ jobs:
         java: [ 6, 7 ]
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
+      - uses: actions/cache@0865c47f36e68161719c5b124609996bb5c40129 # v3.0.5
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-legacy-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-legacy-maven-
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
           java-version: ${{ matrix.java }}
           distribution: zulu
@@ -122,8 +122,8 @@ jobs:
     needs: [ hotspot-ea, hotspot-supported, j9-supported, hotspot-unsupported, hotspot-32, hotspot-legacy ]
     if: github.event_name == 'push'
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
+      - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
           java-version: 8
           distribution: temurin
@@ -137,8 +137,8 @@ jobs:
     needs: [ coverage ]
     if: github.event_name == 'push' && startsWith(github.event.head_commit.message, '[release]')
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
+      - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
         with:
           java-version: 8
           distribution: temurin
